Horizontal scroll fix

--- a/css/custom.css
+++ b/css/custom.css
@@ -11,7 +11,7 @@
     font-size: 20px;
     font-weight: 500;
     margin-left: 25%;
-    margin-right: 10%;
+    margin-right: 20%;
     font-style: italic;
 }
 
